# yachalk

./: .gitignore  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
chalk/: __init__.py  ansi.py  ansi_codes.py  chalk.py  chalk_builder.py  chalk_factory.py  chalk_instance.py  lib.py  supports_color.py  utils.py
examples/: example.py  other_libraries.py
media/: comparison.ods  logo.png.kra
scripts/: check_fmt  check_linter  check_types  ci_all  test
tests/: helper.py  test_ansi.py  test_ansi_codes.py  test_chalk.py  test_supports_color.py  test_utils.py
yachalk/: __init__.py  _win.py  ansi.py  chalk_builder.py  chalk_factory.py  chalk_instance.py  supports_color.py  types.py  utils.py
