# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://github.com/wimglenn/resources-example/blob/master/setup.cfg

[metadata]
name = yachalk
version = attr: yachalk.VERSION
description = Terminal string styling done right
long_description = file: README.md
keywords = one, two
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources

[tool:pytest]
addopts = --cov=yachalk --cov-report term-missing --cov-report html:.cov_html --cov-report=xml

[flake8]
max-line-length = 100
