# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://github.com/wimglenn/resources-example/blob/master/setup.cfg

[metadata]
name = yachalk
version = attr: yachalk.VERSION
description = 🖍️ Terminal string styling done right
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bluenote10/yachalk
keywords = terminal, color, styling, ansi
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Terminals
    Topic :: System :: Logging


[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[tool:pytest]
addopts = --cov=yachalk --cov-report term-missing --cov-report html:.cov_html --cov-report=xml


[flake8]
max-line-length = 100
